--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: c
-script: bin/bats --tap test
+before_install:
+  - sudo add-apt-repository ppa:duggan/bats --yes
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq bats
+script: bats --tap test
 notifications:
   email:
     on_success: never
