--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: bash
 before_install:
-  - sudo add-apt-repository ppa:duggan/bats --yes
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq bats
+  - add-apt-repository ppa:duggan/bats --yes
+  - apt-get update -qq
+  - apt-get install -qq bats
 script: bats --tap test
 notifications:
   email:
