--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ after_success: |
   cd ../.. &&
   rm -rf kcov-master &&
   mkdir -p coverage &&
-  kcov --include-path=. --exclude-pattern='bash,test/stub,testspace/lnkr_lib' coverage bats test &&
+  kcov --include-path=. coverage bats test &&
   bash <(curl -s https://codecov.io/bash)
 notifications:
   email:
