--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Test with coverage
+    - name: Test
+      run: bats test
+
+    - name: Create and upload test coverage
       run: |-
         mkdir -p coverage &&
         kcov coverage bats test &&
